[package]
name = "tid-apc-injection"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",                  # GetLastError, CloseHandle, INVALID_HANDLE_VALUE
    "Win32_System_Diagnostics_ToolHelp", # CreateToolhelp32Snapshot, Thread32First, Thread32Next
    "Win32_System_Threading",           # OpenThread, QueueUserAPC, THREAD_SET_CONTEXT
    "Win32_System_Memory",              # VirtualAllocEx, VirtualProtectEx, VirtualQueryEx
    "Win32_System_Diagnostics_Debug",    # ReadProcessMemory, WriteProcessMemory
    "Win32_Security"                     # APC & Thread 
] }
